# pandoc-mermaid-selenium-filter

./: .gitignore  README.md  filter.py  hatch_build.py  mermaid_converter.py  pyproject.toml
.github/workflows/: release.yml  test.yml
example/: example.md
src/pandoc_mermaid_selenium_filter/: filter.py  mermaid_converter.py
tests/: test_filter.py  test_mermaid_converter.py
